# server-client-chat

./: CMakeLists.txt
include/: public.h
include/server/: ChatServer.h  ChatService.h
include/server/db/: MysqlConnection.h  MysqlConnectionPool.h
include/server/model/: friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessagemodel.h  user.h  usermodel.h
include/server/redis/: redis.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/db/: MysqlConnection.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
